# CUDA_Practice

./: .gitignore  CMakeLists.txt  README.md  basis.cu  conv.cu  matrix.cuh
include/: error.cuh  matrix.cuh
